WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36028
Crash with uniform array test
https://bugs.webkit.org/show_bug.cgi?id=36028
Summary
Crash with uniform array test
Kenneth Russell
Reported
2010-03-11 12:16:36 PST
The attached test case crashes the Chromium WebGL port in the V8 custom bindings.
Attachments
Test case
(8.75 KB, text/plain)
2010-06-28 13:30 PDT
,
Kenneth Russell
no flags
Details
Patch
(8.10 KB, patch)
2010-07-08 19:03 PDT
,
Kenneth Russell
dglazkov
: review+
kbr
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kenneth Russell
Comment 1
2010-06-28 13:30:11 PDT
Created
attachment 59931
[details]
Test case
Kenneth Russell
Comment 2
2010-07-08 19:03:29 PDT
Created
attachment 60995
[details]
Patch From the ChangeLog: Fixed type tests and casting of incoming arrays. Fixed crash when null WebGLUniform is passed to getUniform. Separated calling wrong uniform*fv entry point from calling with non-array. Updated test expectations.
Dimitri Glazkov (Google)
Comment 3
2010-07-09 09:39:01 PDT
Comment on
attachment 60995
[details]
Patch ok.
Kenneth Russell
Comment 4
2010-07-09 09:43:58 PDT
Committed
r62961
: <
http://trac.webkit.org/changeset/62961
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug