2010-07-09  Kenneth Russell  <kbr@google.com>

Reviewed by Dimitri Glazkov.

        Crash with uniform array test
        https://bugs.webkit.org/show_bug.cgi?id=36028

        * bindings/v8/custom/V8WebGLRenderingContextCustom.cpp:
        (WebCore::vertexAttribAndUniformHelperf):
        (WebCore::uniformHelperi):
        (WebCore::uniformMatrixHelper):
         - Fixed type tests and casting of incoming arrays.
        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::getUniform):
         - Fixed crash when null WebGLUniform is passed to getUniform.
2010-07-09  Kenneth Russell  <kbr@google.com>

        Reviewed by Dimitri Glazkov.

        Crash with uniform array test
        https://bugs.webkit.org/show_bug.cgi?id=36028

        * fast/canvas/webgl/gl-uniform-arrays-expected.txt:
         - Updated test expectations.
        * fast/canvas/webgl/gl-uniform-arrays.html:
         - Separated calling wrong uniform*fv entry point from calling with non-array.


Canonical link: https://commits.webkit.org/53851@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62961 268f45cc-cd09-0410-ab3c-d52691b4dbfc