WebCore/html/canvas/WebGLRenderingContext.cpp
@@ -1557,6 +1557,10 @@ WebGLGetInfo WebGLRenderingContext::getUniform(WebGLProgram* program, const WebG
     UNUSED_PARAM(ec);
     if (!validateWebGLObject(program))
         return WebGLGetInfo();
+    if (!uniformLocation) {
+        m_context->synthesizeGLError(GraphicsContext3D::INVALID_VALUE);
+        return WebGLGetInfo();
+    }
     if (uniformLocation->program() != program) {
         m_context->synthesizeGLError(GraphicsContext3D::INVALID_OPERATION);
         return WebGLGetInfo();
